# task3

./: AutoTest.cpp  CMakeLists.txt  List.cpp  List.h  Matrix.cpp  Matrix.h  Node.cpp  Node.h  Num.cpp  Num.h  Temp.cpp  Temp.h  data.txt  task3.cpp
